# sqlx-leak-repro

./: Cargo.toml  README.md
src/: main.rs
