[package]
name = "sqlx_leak_repro"
version = "0.1.0"
authors = ["Ian Wagner <ian.wagner@stadiamaps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
hyper = "0.13.1"
log = "0.4.8"
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"
simple_logger = "1.4.0"

[dependencies.serde]
version = "1.0.92"
features = ["derive"]

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx.git"
branch = "ab/pool-fixes"
#path = "../sqlx"
default-features = false
features = ["runtime-tokio", "postgres", "chrono", "macros"]

[dependencies.tokio]
version = "0.2.10"
features = ["macros", "rt-threaded", "signal", "time"]
